impl recorder part of Gameplay Recorder system and made plugin to select records
if I succeed at implementing this feature it will greatly help with getting more insightful playtesting information!

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ Build/
 
 # Godot temp files problem https://github.com/godotengine/godot/issues/82270
 *.TMP
+
+# Gameplay records
+addons/gameplay_recorder_interface/records
