--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="Build/Windows/Project Gallery.exe"
+export_path="Build/Project_Gallery_win.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -71,7 +71,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="Build/Linux/Project Gallery.x86_64"
+export_path="Build/Project Gallery_Linux.x86_64"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
